--- a/Examples/poc.ipynb
+++ b/Examples/poc.ipynb
@@ -256,7 +256,33 @@
    "id": "9e1be7e1-b595-43d1-a79f-812d12c465be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np \n",
+    "from sksurv.datasets import load_breast_cancer \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Load dataset \n",
+    "X, y = load_breast_cancer()\n",
+    "\n",
+    "# Unpack \n",
+    "event, duration = zip(*y)\n",
+    "e = np.array(event)\n",
+    "t = np.array(duration)\n",
+    "\n",
+    "# Drop columns that are not numerical \n",
+    "X = X[X.columns[X.dtypes != \"category\"]]\n",
+    "\n",
+    "# Train-test splitting \n",
+    "train_idx, test_idx = train_test_split(\n",
+    "    np.arange(X.shape[0]), test_size=0.25, random_state=42, stratify=e.astype(int)\n",
+    ")\n",
+    "X_train, X_test = X.iloc[train_idx].to_numpy(), X.iloc[test_idx].to_numpy()\n",
+    "y_train, y_test = y[train_idx], y[test_idx]\n",
+    "e_train, e_test = e[train_idx], e[test_idx]\n",
+    "t_train, t_test = t[train_idx], t[test_idx]\n",
+    "\n",
+    "X_train.shape, X_test.shape "
+   ]
   }
  ],
  "metadata": {
